# Gruppe-6

./: CMakeLists.txt  display.cpp  main.cpp  preproc.cpp  straighten.cpp
input/: input.md
input_display/: input_display.md
outputBB/: outputBB.md
outputVZ/: outputVZ.md
output_transparent/: outputTR.md
rawBB/: rawBB.md
